--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="contact.html">Contact</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="https://github.com/rbartl2">Github</a>
+                    </li>
                   </ul>
                 </div>
               </nav>
@@ -53,7 +56,7 @@
     </div>
 
     <footer class="footer">
-             <span class="text-dark">Copyright</span>
+      <span class="text-dark">Copyright</span>
     </footer>
     
 </body>
